--- a/StyleSheets/main.css
+++ b/StyleSheets/main.css
@@ -14,6 +14,7 @@ header
     height: 95px;
     width: 100%;
     position: fixed;
+    overflow: visible;
 }
 
 body
@@ -43,7 +44,7 @@ body
 
 a:link
 {
-    color: blue;
+    color: lightblue;
 }
 
 a:visited
