--- a/StyleSheets/main.css
+++ b/StyleSheets/main.css
@@ -10,8 +10,8 @@ header
     color: rgb(200, 200, 200);
     background-color: rgba(25,80,55,0.8);
     margin-bottom: 10px;
-    padding: 0px;
-    height: 95px;
+    height: auto;
+    padding-bottom: 5px;
     width: 100%;
     position: fixed;
     overflow: visible;
@@ -85,4 +85,5 @@ a.one:active
 .navigation
 {
     font-size: 25px;
+    margin: 0px;
 }
