--- a/StyleSheets/main.css
+++ b/StyleSheets/main.css
@@ -1,7 +1,3 @@
-html{
-    height: 100%;
-}
-
 h1
 {
     margin-top: 0;
@@ -20,38 +16,17 @@ body
 {
     margin: 0px;
     text-align: center;
-    color: rgb(200, 200, 200);
-
     height: 100%;
     background-position: center;
     background-repeat: no-repeat;
-    background: linear-gradient(to left, lightgrey, lightblue, lightblue, lightblue, lightgrey);
-}
-
-li
-{
-    text-align: left;
-    color: black;
-    
-}
-
-#linkselect
-{
-    z-index: -1;
-    position: fixed;
-    left: 300px;
-    background-color: rgb(0, 0, 0);
-    margin-top: -5px;
-    height: 39px;
+    background: linear-gradient(to left, lightgrey, darkgrey, darkgrey, darkgrey, lightgrey);
 }
 
 .text
 {
-    font-family: serif;
-    
     display: inline-block;
     color: black;
-    background-color: lightcyan;
+    background-color: white;
     max-width: 800px;
     margin: 5px;
     margin-top: 10px;
@@ -99,6 +74,4 @@ a.one:active
     margin: 0px;
     padding: 5px;
 }
-h2 {
-    text-align: center;
-}
+
