--- a/StyleSheets/main.css
+++ b/StyleSheets/main.css
@@ -24,13 +24,20 @@ body
 
 .text
 {
+    border-radius: 10px;
+    
+    max-width: 800px;
+    font-size: 140%;
     display: inline-block;
+    
     color: black;
     background-color: white;
-    max-width: 800px;
-    margin: 5px;
+    
     margin-top: 10px;
-    padding: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+    
+    padding: 12px;
     text-align: left;
 }
 
@@ -47,7 +54,7 @@ a:visited
 a.one:link
 {
     margin: 3px;
-    color: blue;
+    color: red;
     padding: 2px;
     padding-left: 8px;
     padding-right: 8px;
